--- a/ShopAndChop_Final/GoogleService-Info.plist
+++ b/ShopAndChop_Final/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1017614854892-a0cm5kbrifreibobrjeg4agk31u13llr.apps.googleusercontent.com</string>
+	<string>804966357910-k9vdlsotjtd8osqeu6qhlk6ncgndih48.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1017614854892-a0cm5kbrifreibobrjeg4agk31u13llr</string>
+	<string>com.googleusercontent.apps.804966357910-k9vdlsotjtd8osqeu6qhlk6ncgndih48</string>
 	<key>API_KEY</key>
-	<string>AIzaSyB1n2wu8AMKAB-i7uGe9frlGCf-uH1MVJA</string>
+	<string>AIzaSyDd2qQfsHqFhUY46JTg8K7cUQxa2ZOvKzM</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1017614854892</string>
+	<string>804966357910</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.ngtlucuab.ShopAndChop-Final</string>
 	<key>PROJECT_ID</key>
-	<string>shopandchop-final-192e7</string>
+	<string>shopandchop-final-d6805</string>
 	<key>STORAGE_BUCKET</key>
-	<string>shopandchop-final-192e7.appspot.com</string>
+	<string>shopandchop-final-d6805.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1017614854892:ios:91437620018d732a2493c9</string>
+	<string>1:804966357910:ios:ff32823715c709e51a5bb7</string>
 </dict>
 </plist>
